<resources>
    <string name="acertou">Acertou</string>
    <string name="aguarde">Aguarde</string>
    <string name="alterar_cadastro">Alterar cadastro</string>
    <string name="alterar_cadastro_usuario">Alterar cadastro de usuário</string>
    <string name="android_">Android:</string>
    <string name="apagar">Apagar</string>
    <string name="app_name">Class Net</string>
    <string name="automatricula">Automatrícula</string>
    <string name="aviso">Aviso</string>
    <string name="bairro_">Bairro:</string>
    <string name="baixando">Baixando</string>
    <string name="baixando_arquivos">Baixando arquivos</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastro_alterado">Cadastro alterado com sucesso</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="cancelar">Cancelar</string>
    <string name="cep_">CEP:</string>
    <string name="cidade_">Cidade:</string>
    <string name="classnetlocal_antigo">Versão desatualizada. Atualizar versão?.</string>
    <string name="classnetserver_antigo">Servidor desatualizado. Instalar versão anterior compatível com servidor?</string>
    <string name="codigo">Código</string>
    <string name="codigo_">Código:</string>
    <string name="codigo_titulo"><![CDATA[Código/Título]]></string>
    <string name="configuracoes">Configurações</string>
    <string name="consultar_notas">Consultar notas</string>
    <string name="data_atualizacao_">Data de atualização:</string>
    <string name="densidade_">Densidade:</string>
    <string name="deseja_apagar_servidor">Deseja realmente apagar este servidor?</string>
    <string name="digite_usuario_senha">Digite usuário e senha</string>
    <string name="email_">E-mail:</string>
    <string name="endereco_">Endereço:</string>
    <string name="endereco_servidor"><![CDATA[Endereço do servidor(Ex: http://amazon.class.com.br/classnet/)]]></string>
    <string name="erro_campos_obrigatorios">Existem campo obrigatórios vazios</string>
    <string name="erro_carregar_html">Erro ao carregar HTML</string>
    <string name="erro_carregar_tela">Erro ao carregar tela</string>
    <string name="erro_nova_senha_redigite_senha">Nova senha e confirmação de senha diferem</string>
    <string name="erro_senha_atual_direfente">Senha atual incorreta</string>
    <string name="erro_senha_atual_vazio">Para atualizar sua senha é necessário entrar com a senha atual</string>
    <string name="errou">Errou</string>
    <string name="fabricante">Fabricante: Caltech Informática Ltda</string>
    <string name="feminino">Feminino</string>
    <string name="fim_projeto">Fim do projeto</string>
    <string name="foto_">Foto:</string>
    <string name="gravar">Gravar</string>
    <string name="info_dispositivo">Informações sobre o dispositivo</string>
    <string name="info_titulo">Informações sobre o software</string>
    <string name="informacoes">Informações</string>
    <string name="informacoes_min">Informações</string>
    <string name="iniciar_login">Iniciar com tela de login</string>
    <string name="instituicao_">Instituição:</string>
    <string name="instituicao_bloqueada">Intituição bloqueada, entre em contato com o desenvolvedor</string>
    <string name="listar">Listar</string>
    <string name="login">Login</string>
    <string name="ok">Ok</string>
    <string name="masculino">Masculino</string>
    <string name="media_geral">Média geral:</string>
    <string name="msg_falta_arrsol">Você não completou Arrastar/Soltar!</string>
    <string name="msg_falta_dissertativa">Você não completou dissertativa!</string>
    <string name="msg_falta_giras">Existem giras figuras errados!</string>
    <string name="msg_falta_ligas">Você não completou liga pontos!</string>
    <string name="msg_falta_preenchimentos">Você não completou preenchimento!</string>
    <string name="msg_falta_selecionar">Falta selecionar alternativa correta!</string>
    <string name="msg_falta_teste_vest">Você não completou teste de vestibular!</string>
    <string name="muito_bem">Muito bem!</string>
    <string name="nao">Não</string>
    <string name="nome_">Nome:</string>
    <string name="nota">Nota</string>
    <string name="nota_">Nota:</string>
    <string name="nota_final_">Nota final:</string>
    <string name="numero_acertos_">Número de acertos:</string>
    <string name="numero_erros_">Número de erros:</string>
    <string name="nova_senha_">Nova senha</string>
    <string name="parabens">Parabéns</string>
    <string name="pense_respeito">Pense a respeito...</string>
    <string name="politica_privacidade">Política de privacidade</string>
    <string name="porta_proxy">Porta do servidor de proxy</string>
    <string name="projetos_atribuidos">Projetos atribuídos</string>
    <string name="projetos_atribuidos_para">Projetos atribuídos para</string>
    <string name="proxy">Proxy</string>
    <string name="redigite_senha">Redigite a senha</string>
    <string name="redigite_senha_">Redigite a senha:</string>
    <string name="relatorio_usuario">Relatório de notas</string>
    <string name="resolucao_">Resolução:</string>
    <string name="reveja">Reveja</string>
    <string name="sair">Sair</string>
    <string name="selecione_instituicao">Selecione uma instituição</string>
    <string name="selecione_servidor_sair">Selecione um servidor para sair</string>
    <string name="senha_">Senha:</string>
    <string name="senha_incorreta">Senha incorreta</string>
    <string name="senha_proxy">Senha proxy</string>
    <string name="senhas_diferem">Os campos de senha e repetir senha são diferentes!</string>
    <string name="servidor_inacessivel">Servidor inacessível</string>
    <string name="servidor_proxy">Servidor de proxy</string>
    <string name="servidores">Servidores</string>
    <string name="sexo_">Sexo:</string>
    <string name="sim">Sim</string>
    <string name="site">Site</string>
    <string name="site_nao_definido">Site não definido para a instituição</string>
    <string name="telefone_">Telefone:</string>
    <string name="tempo">Tempo</string>
    <string name="tempo_">Tempo:</string>
    <string name="tempo_minutos_">Tempo(minutos):</string>
    <string name="tentativas">Tentativas</string>
    <string name="tentativas_">Tentativas:</string>
    <string name="titulo">Título</string>
    <string name="titulo_">Título:</string>
    <string name="usuario_nao_cadastrado">Usuário não cadastrado</string>
    <string name="usuario_proxy">Usuário do servidor proxy</string>
    <string name="youtube_demora">Carregando vídeo do youtube</string>
</resources>
