<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/fundo_padrao">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/shape_1p_branco_verde">

        <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/branco"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/fim_projeto"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

        <TextView
                android:id="@+id/tvNumAcertos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/preto"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/numero_acertos_"/>

        <TextView
                android:id="@+id/tvNumErros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/preto"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/numero_erros_"/>

        <TextView
                android:id="@+id/tvTempoMinutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/preto"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/tempo_minutos_"/>

        <TextView
                android:id="@+id/tvNotaFinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/preto"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/nota_final_"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/preto_2">

        <Button
                android:id="@+id/bOk"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>