<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/barra"
            android:gravity="center_vertical">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icone"
                android:layout_margin="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/preto"
                android:text="@string/alterar_cadastro"
                android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fundo_padrao">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginRight="3dp"
                        android:gravity="right">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/instituicao_"
                            android:textStyle="bold"
                            android:gravity="center_vertical"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/codigo_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="20dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/nome_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/senha_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/nova_senha_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/redigite_senha_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/email_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/telefone_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/endereco_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/cidade_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/bairro_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/cep_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/sexo_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:textColor="@color/preto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:text="@string/foto_"
                            android:gravity="center_vertical"
                            android:layout_marginTop="10dp"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="2dp">

                    <EditText
                            android:id="@+id/etInstituicao"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/shape_edinstituicao"
                            android:inputType="none"
                            android:textColor="@color/preto"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:enabled="false"/>

                    <EditText
                            android:id="@+id/etCodigo"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:background="@drawable/shape_edinstituicao"
                            android:layout_marginTop="20dp"
                            android:textColor="@color/preto"
                            android:enabled="false"/>

                    <EditText
                            android:id="@+id/etNome"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:background="@drawable/shape_edinstituicao"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/preto"
                            android:hint="@string/campo_obrigatorio"/>

                    <EditText
                            android:id="@+id/etSenha"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:background="@drawable/shape_edinstituicao"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/preto"
                            android:inputType="textPassword"/>

                    <EditText
                            android:id="@+id/etNovaSenha"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:background="@drawable/shape_edinstituicao"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/preto"
                            android:inputType="textPassword"/>

                    <EditText
                            android:id="@+id/etRedigiteSenha"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:background="@drawable/shape_edinstituicao"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/preto"
                            android:inputType="textPassword"/>

                    <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:background="@drawable/shape_edinstituicao"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/preto"
                            android:inputType="textEmailAddress"/>

                    <EditText
                            android:id="@+id/etTelefone"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:background="@drawable/shape_edinstituicao"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/preto"
                            android:inputType="phone"/>

                    <EditText
                            android:id="@+id/etEndereco"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:background="@drawable/shape_edinstituicao"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/preto"/>

                    <EditText
                            android:id="@+id/etCidade"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:background="@drawable/shape_edinstituicao"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/preto"/>

                    <EditText
                            android:id="@+id/etBairro"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:background="@drawable/shape_edinstituicao"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/preto"/>

                    <EditText
                            android:id="@+id/etCep"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:background="@drawable/shape_edinstituicao"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/preto"
                            android:inputType="numberSigned"/>

                    <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:orientation="vertical"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical">

                        <RadioButton
                                android:id="@+id/rbMasculino"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/preto"
                                android:text="@string/masculino"
                                android:checked="true"/>

                        <RadioButton
                                android:id="@+id/rbFeminino"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/preto"
                                android:text="@string/feminino"/>

                    </RadioGroup>

                    <ImageView
                            android:id="@+id/ivFoto"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/aluno"
                            android:layout_marginTop="10dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="right">

                <Button
                        android:id="@+id/bCancelar"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/preto"
                        android:text="@string/cancelar"/>

                <Button
                        android:id="@+id/bGravar"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/preto"
                        android:text="@string/gravar"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>